--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
+    "@clerk/themes": "^1.7.10",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
