--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "drizzle-orm": "^0.29.4",
+    "lucide-react": "^0.359.0",
     "next": "^14.1.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
