--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "drizzle-orm": "^0.29.4",
     "lucide-react": "^0.359.0",
     "next": "^14.1.3",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.41",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
