--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.10",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
