--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.28.4",
     "@trpc/client": "next",
@@ -41,9 +43,11 @@
     "react-hook-form": "^7.51.2",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
+    "stripe": "^15.1.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "use-shopping-cart": "^3.2.0",
     "validator": "^13.11.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
