--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.359.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
+    "next-view-transitions": "^0.1.1",
     "postgres": "^3.4.3",
     "raw-body": "^2.5.2",
     "react": "18.2.0",
