--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "postgres": "^3.4.3",
     "raw-body": "^2.5.2",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-use": "^17.5.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "stripe": "^15.1.0",
